[package]
name = "jp-transcript"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "simple lib for converting japanese text to its transliteration"
license = "MIT"
repository = "https://github.com/nyars-jiten/jp-transcript"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
phf = { version = "0.10" }

[build-dependencies]
phf_codegen = { version = "0.10" }
