[package]
name = "jp-transcript"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Simple lib for converting japanese texts to its transliteration"
license = "MIT"
repository = "https://github.com/nyars-jiten/jp-transcript"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1

[dependencies]
wasm-bindgen = { version = "0.2.81" }
phf = { version = "0.10" }

[build-dependencies]
phf_codegen = { version = "0.10" }
